# nemethricsi

./: .gitignore  README.md  passwords.txt
week-01/day-3/Cuboid/: CMakeLists.txt  main.cpp
week-01/day-3/OddEven/: CMakeLists.txt  main.cpp
week-01/day-3/animalsAndLegs/: CMakeLists.txt  main.cpp
week-01/day-3/averageOfInput/: CMakeLists.txt  main.cpp
week-01/day-3/bmi/: CMakeLists.txt  main.cpp
week-01/day-3/codingHours/: CMakeLists.txt  main.cpp
week-01/day-3/defineBasicInfo/: CMakeLists.txt  main.cpp
week-01/day-3/favoriteNumber/: CMakeLists.txt  main.cpp
week-01/day-3/helloMe/: CMakeLists.txt  main.cpp
week-01/day-3/helloOthers/: CMakeLists.txt  main.cpp
week-01/day-3/helloUser/: CMakeLists.txt  main.cpp
week-01/day-3/humptyDumpty/: CMakeLists.txt  main.cpp
week-01/day-3/introduceYourself/: CMakeLists.txt  main.cpp
week-01/day-3/mileToKmConverter/: CMakeLists.txt  main.cpp
week-01/day-3/oneTwoALot/: CMakeLists.txt  main.cpp
week-01/day-3/printBigger/: CMakeLists.txt  main.cpp
week-01/day-3/secondsInADay/: CMakeLists.txt  main.cpp
week-01/day-3/swap/: CMakeLists.txt  main.cpp
week-01/day-3/twoNumbers/: CMakeLists.txt  main.cpp
week-01/day-3/variableMutation/: CMakeLists.txt  main.cpp
week-01/day-4/ParametricAverage/: CMakeLists.txt  main.cpp
week-01/day-4/conditionalVariableMutation/: CMakeLists.txt  main.cpp
week-01/day-4/countFromTo/: CMakeLists.txt  main.cpp
week-01/day-4/drawChessTable/: CMakeLists.txt  main.cpp
week-01/day-4/drawDiagonal/: CMakeLists.txt  main.cpp
week-01/day-4/drawDiamond/: CMakeLists.txt  main.cpp
week-01/day-4/drawPyramid/: CMakeLists.txt  main.cpp
week-01/day-4/drawSquare/: CMakeLists.txt  main.cpp
week-01/day-4/drawTriangle/: CMakeLists.txt  main.cpp
week-01/day-4/fizzBuzz/: CMakeLists.txt  main.cpp
week-01/day-4/guessTheNumber/: CMakeLists.txt  main.cpp
week-01/day-4/iWontCheatOnTheExams/: CMakeLists.txt  main.cpp
week-01/day-4/multiplicationTable/: CMakeLists.txt  main.cpp
week-01/day-4/partyIndicator/: CMakeLists.txt  main.cpp
week-01/day-4/printEven/: CMakeLists.txt  main.cpp
week-01/day-5/: CMakeLists.txt  anagram.cpp  append_a.cpp  append_a_arrays.cpp  bubble_sort.cpp  change_element.cpp  colors.cpp  compare_length.cpp  double_items.cpp  doubling.cpp  factorial.cpp  greeter_function.cpp  increment_element.cpp  matrix.cpp  print_elements.cpp  reverse_elements.cpp  sum_all.cpp  sum_elements.cpp  summing.cpp  swap.cpp  swap_arrays.cpp  third.cpp  unique.cpp
week-02/day-1/: CMakeLists.txt  list_introduction_1.cpp  list_introduction_2.cpp  map_introduction_1.cpp  reverse.cpp  simple_replace.cpp  takes_longer.cpp  todo_print.cpp  url_fixer.cpp
week-02/day-2/: CMakeLists.txt  add.cpp  append_letter.cpp  armstrong_number.cpp  change_value.cpp  find_minimum.cpp  five_numbers.cpp  look_for_max.cpp  look_for_value.cpp  map_intro_2.cpp  matchmaking.cpp  personal_finance.cpp  pointer_type.cpp  print_addresses.cpp  print_value.cpp  product-database-2.cpp  product_database.cpp  shopping_list.cpp  shopping_list_2.cpp  solar_system.cpp  swap.cpp  telephone_book.cpp
week-02/day-3/: CMakeLists.txt  centered_boxes.cpp  centered_square.cpp  checkerboard.cpp  colored_box.cpp  connect_the_dots.cpp  diagonals.cpp  draw.cpp  four_rectangles.cpp  function_to_center.cpp  horizontal_lines.cpp  line_in_the_middle.cpp  purple_steps.cpp  purple_steps_3d.cpp  rainbow_box.cpp  square_positioning.cpp  to_the_center.cpp
week-02/day-4/: CMakeLists.txt  draw.cpp  envelope_star.cpp  line_play.cpp  main.cpp
week-03/BlogPost/: main.cpp
week-03/day-1/: CMakeLists.txt  copy.txt  copy_file.cpp  count_lines.cpp  divide_by_zero.cpp  logs.cpp  my-file.txt  print_each_line.cpp  write_multiple_lines.cpp  write_single_line.cpp
week-03/day-3/: CMakeLists.txt  PostItClass.cpp
week-03/day-3/Animal/: Animal.cpp  Animal.h  CMakeLists.txt  main.cpp
week-03/day-3/BlogPost/: BlogPost.cpp  BlogPost.h  CMakeLists.txt
week-03/day-3/Counter/: CMakeLists.txt  Counter.cpp  Counter.h  main.cpp
week-03/day-3/Pokemon/: CMakeLists.txt  Pokemon.cpp  Pokemon.h  main.cpp
week-03/day-3/PostIt/: CMakeLists.txt  PostItClass.h  main.cpp
week-03/day-3/Sharpie/: CMakeLists.txt  Sharpie.cpp  Sharpie.h  main.cpp
week-03/day-4/Blog/: Blog.cpp  Blog.h  BlogPost.cpp  BlogPost.h  CMakeLists.txt  main.cpp
week-03/day-4/DiceSet/: CMakeLists.txt  DiceSet.cpp  DiceSet.h  main.cpp
week-03/day-4/Farm/: Animal.cpp  Animal.h  CMakeLists.txt  Farm.cpp  Farm.h  main.cpp
week-03/day-4/FleetOfThings/: CMakeLists.txt  Fleet.cpp  Fleet.h  Thing.cpp  Thing.h  main.cpp
week-03/day-5/: CMakeLists.txt  bunnies.cpp  greatest_common_divisor.cpp  number_adder.cpp  power.cpp  sum_digit.cpp
week-03/day-5/FractalsDrawing/: CMakeLists.txt  circle.cpp  draw.cpp  draw.h  main.cpp  sierpinsky_carpet.cpp
week-03/day-5/FractalsDrawing/cmake/: FindGFA_SDL2.cmake
week-04/day-3/test/: CMakeLists.txt  main.cpp
week-04/day-3/test/MyApp_lib/: Anagram.cpp  Anagram.h  Apple.cpp  Apple.h  CMakeLists.txt  TestFixture.cpp  TestFixture.h
week-04/day-3/test/MyApp_tests/: CMakeLists.txt  anagramTest.cpp  appleTest.cpp  testFixtureTest.cpp
week-06/day-00/: bmi.ts  compare-length.ts  favorite-number.ts  third.ts
week-07/day-01/: README.md
week-07/day-02/: 03-multiple-timeout.js  README.md  callback-1.js
week-07/day-04/: SQL_AND_NODEJS.md  database.sql
week-08/day-04/: bubbling.html  count-the-elements.html  delayed-click.html  keyup.html  one-time-clicker.html
week-09/day-02/: 02-big-area.html  03-simple-layout.html  04-advanced-layout.html  06-board-game.html  CSSGrrid.md  README.md  simple-row.html
week-09/day-03/: supertest-init.sh
week-10/: README.md
week-10/Alias/: package-lock.json  package.json  routes.js  server.js
week-10/FoxPlayer/: package-lock.json  package.json  server.js
week-999/: shortest-path.js
(+283 files in other folders)
