cmake_minimum_required(VERSION 3.14)
project(day_5)

set(CMAKE_CXX_STANDARD 14)

add_executable(doubling doubling.cpp)
add_executable(greeter_function greeter_function.cpp)
add_executable(append_a append_a.cpp)
add_executable(summing summing.cpp)
add_executable(factorial factorial.cpp)
add_executable(swap swap.cpp)
add_executable(third third.cpp)
add_executable(compare_length compare_length.cpp)
add_executable(sum_elements sum_elements.cpp)
add_executable(change_element change_element.cpp)
add_executable(increment_element increment_element.cpp)
add_executable(print_elements print_elements.cpp)
add_executable(matrix matrix.cpp)
add_executable(double_items double_items.cpp)
add_executable(colors colors.cpp)
add_executable(append_a_arrays append_a_arrays.cpp)
add_executable(swap_arrays swap_arrays.cpp)
add_executable(sum_all sum_all.cpp)
add_executable(reverse_elements reverse_elements.cpp)
add_executable(unique unique.cpp)
add_executable(bubble_sort bubble_sort.cpp)