cmake_minimum_required(VERSION 3.14)
project(day_2)

set(CMAKE_CXX_STANDARD 14)

add_executable(map_intro_2 map_intro_2.cpp)
add_executable(pointer_type pointer_type.cpp)
add_executable(print_value print_value.cpp)
add_executable(change_value change_value.cpp)
add_executable(add add.cpp)
add_executable(find_minimum find_minimum.cpp)
add_executable(swap swap.cpp)
add_executable(print_addresses print_addresses.cpp)
add_executable(five_numbers five_numbers.cpp)
add_executable(look_for_value look_for_value.cpp)
add_executable(look_for_max look_for_max.cpp)
add_executable(personal_finance personal_finance.cpp)