cmake_minimum_required(VERSION 3.14)
project(day_1)

set(CMAKE_CXX_STANDARD 14)

add_executable(divide_by_zero divide_by_zero.cpp)
add_executable(print_each_line print_each_line.cpp)
add_executable(count_lines count_lines.cpp)
add_executable(write_single_line write_single_line.cpp)
add_executable(write_multiple_lines write_multiple_lines.cpp)
add_executable(copy_file copy_file.cpp)
add_executable(logs logs.cpp)