cmake_minimum_required(VERSION 3.14)
project(day_5)

set(CMAKE_CXX_STANDARD 14)

add_executable(number_adder number_adder.cpp)
add_executable(sum_digit sum_digit.cpp)
add_executable(power power.cpp)
add_executable(greatest_common_divisor greatest_common_divisor.cpp)
add_executable(bunnies bunnies.cpp)